--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logoHL.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hyper-List</title>
+    <meta name="viewport" content="width=1920">
+    <title>HYPER-LIST</title>
   </head>
   <body>
     <div id="root"></div>
